--- a/composer.json
+++ b/composer.json
@@ -12,16 +12,16 @@
     "license": "MIT",
     "type": "library",
     "require": {
-        "laravel/framework": "^12.1"
+        "php": ">=8.2",
+        "laravel/framework": "^11.0|^12.0"
     },
     "require-dev": {
         "pestphp/pest": "^3.7",
-        "orchestra/testbench": "^10.1",
         "phpstan/phpstan": "^2.1"
     },
     "autoload": {
         "psr-4": {
-            "Olilaban\\LaravelPbkdf2Hasher\\": "src/"
+            "OliLaban\\LaravelPbkdf2Hasher\\": "src/"
         }
     },
     "authors": [
@@ -34,5 +34,13 @@
         "allow-plugins": {
             "pestphp/pest-plugin": true
         }
+    },
+    "scripts": {
+        "test": [
+            "@php vendor/bin/pest --colors=always"
+        ],
+        "lint": [
+            "@php vendor/bin/phpstan analyse --verbose --ansi"
+        ]
     }
 }
